; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/engine/graph/extr_nv20.c_nv20_graph_context_init.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/gpu/drm/nouveau/core/engine/graph/extr_nv20.c_nv20_graph_context_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nouveau_object = type { i64 }
%struct.nv20_graph_priv = type { i32 }
%struct.nv20_graph_chan = type { i32, i32 }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @nv20_graph_context_init(%struct.nouveau_object* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.nouveau_object*, align 8
  %4 = alloca %struct.nv20_graph_priv*, align 8
  %5 = alloca %struct.nv20_graph_chan*, align 8
  %6 = alloca i32, align 4
  store %struct.nouveau_object* %0, %struct.nouveau_object** %3, align 8
  %7 = load %struct.nouveau_object*, %struct.nouveau_object** %3, align 8
  %8 = getelementptr inbounds %struct.nouveau_object, %struct.nouveau_object* %7, i32 0, i32 0
  %9 = load i64, i64* %8, align 8
  %10 = inttoptr i64 %9 to i8*
  %11 = bitcast i8* %10 to %struct.nv20_graph_priv*
  store %struct.nv20_graph_priv* %11, %struct.nv20_graph_priv** %4, align 8
  %12 = load %struct.nouveau_object*, %struct.nouveau_object** %3, align 8
  %13 = bitcast %struct.nouveau_object* %12 to i8*
  %14 = bitcast i8* %13 to %struct.nv20_graph_chan*
  store %struct.nv20_graph_chan* %14, %struct.nv20_graph_chan** %5, align 8
  %15 = load %struct.nv20_graph_chan*, %struct.nv20_graph_chan** %5, align 8
  %16 = getelementptr inbounds %struct.nv20_graph_chan, %struct.nv20_graph_chan* %15, i32 0, i32 1
  %17 = call i32 @nouveau_graph_context_init(i32* %16)
  store i32 %17, i32* %6, align 4
  %18 = load i32, i32* %6, align 4
  %19 = icmp ne i32 %18, 0
  br i1 %19, label %20, label %22

20:                                               ; preds = %1
  %21 = load i32, i32* %6, align 4
  store i32 %21, i32* %2, align 4
  br label %36

22:                                               ; preds = %1
  %23 = load %struct.nv20_graph_priv*, %struct.nv20_graph_priv** %4, align 8
  %24 = getelementptr inbounds %struct.nv20_graph_priv, %struct.nv20_graph_priv* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = load %struct.nv20_graph_chan*, %struct.nv20_graph_chan** %5, align 8
  %27 = getelementptr inbounds %struct.nv20_graph_chan, %struct.nv20_graph_chan* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = mul nsw i32 %28, 4
  %30 = load %struct.nv20_graph_chan*, %struct.nv20_graph_chan** %5, align 8
  %31 = call %struct.TYPE_2__* @nv_gpuobj(%struct.nv20_graph_chan* %30)
  %32 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %31, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = ashr i32 %33, 4
  %35 = call i32 @nv_wo32(i32 %25, i32 %29, i32 %34)
  store i32 0, i32* %2, align 4
  br label %36

36:                                               ; preds = %22, %20
  %37 = load i32, i32* %2, align 4
  ret i32 %37
}

declare dso_local i32 @nouveau_graph_context_init(i32*) #1

declare dso_local i32 @nv_wo32(i32, i32, i32) #1

declare dso_local %struct.TYPE_2__* @nv_gpuobj(%struct.nv20_graph_chan*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
